fix text align in footer on xs devices

--- a/src/components/Footer/styles/Footer.module.css
+++ b/src/components/Footer/styles/Footer.module.css
@@ -16,6 +16,7 @@
 
 .footer__copyright {
     padding: 0 0 1rem 0;
+    text-align: center;
     color: #212738;
 }
 
